apps/302.go/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 302go
spec:
  selector:
    app.kubernetes.io/name: 302go
  ports:
    - name: http
      port: 80
      targetPort: http
